syntax = "proto3";

option csharp_namespace = "GrpcAgeny";

package GrpcAgeny;

service Notifier {
  rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
  string content = 1;
}

message NotifyReply {
  bool isSuccess = 1;
}
